--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ overflow-checks = true
 near-sdk = "2.0.0"
 near-lib = { path = "../near-lib-rs" }
 serde = { version = "*", features = ["derive"] }
+sha2 = "0.9.3"
